core/tests/de/unisb/cs/depend/ccs_sem/junit/integrationtests/invalid/WholeActionInRestriction1.java
package de.unisb.cs.depend.ccs_sem.junit.integrationtests.invalid;


import de.unisb.cs.depend.ccs_sem.junit.FailingIntegrationTest;


public class WholeActionInRestriction1 extends FailingIntegrationTest {

    @Override
    protected String getExpressionString() {
        return "a!.0 \\ {a!}";
    }

    @Override
    protected int getExpectedParsingErrors() {
        return 1;
    }

    @Override
    protected boolean expectParsedProgram() {
        return false;
    }

}
